Сделана шапка, обновлён шрифт

--- a/app/index.html
+++ b/app/index.html
@@ -5,50 +5,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="favicon.ico">
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.min.css">
-  <title>Document</title>
+  <title>Единая геоинформационная система Ненецкого автономного округа</title>
 </head>
 
 <body>
-
-  <div class="menu">
-    <div class="btn trigger">
-    </div>
-    <div class="icons">
-      <div class="rotater">
-        <div class="btn btn-icon">
-        </div>
+  <div class="wrapper">
+    <section class="head">
+      <div class="head-wrapper">
+        <a class="head-brand" href="https://adm-nao.ru/" target="_blank">
+          <img src="img/brandbook.png" alt="НАО" height="50">
+        </a>
+        <h1 class="head-title">Единая геоинформационная система Ненецкого автономного округа</h1>
       </div>
-      <div class="rotater">
-        <div class="btn btn-icon">
-        </div>
-      </div>
-      <div class="rotater">
-        <div class="btn btn-icon">
-        </div>
-      </div>
-      <div class="rotater">
-        <div class="btn btn-icon">
-        </div>
-      </div>
-      <div class="rotater">
-        <div class="btn btn-icon">
-        </div>
-      </div>
-      <div class="rotater">
-        <div class="btn btn-icon">
-        </div>
-      </div>
-      <div class="rotater">
-        <div class="btn btn-icon">
-        </div>
-      </div>
-      <div class="rotater">
-        <div class="btn btn-icon">
-        </div>
-      </div>
-    </div>
+      <nav class="head-nav">
+        <ul class="head-nav-list">
+          <li class="head-nav-item"><a class="head-nav-link" href="#">главная</a></li>
+          <li class="head-nav-item"><a class="head-nav-link" href="#">каталог данных</a></li>
+          <li class="head-nav-item"><a class="head-nav-link" href="#">о системе</a></li>
+        </ul>
+      </nav>
+    </section>
   </div>
+
   <script src="js/jquery.js"></script>
   <script src="js/main.min.js"></script>
 </body>
