Добавлены значки категорий

--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="favicon.ico">
-  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="icon" type="image/png" href="favicon.png" />
   <link rel="stylesheet" href="css/style.min.css">
   <title>Единая геоинформационная система Ненецкого автономного округа</title>
 </head>
@@ -69,7 +68,7 @@
     </header>
 
     <main class="main">
-
+      <ul id="hexGrid"></ul>    
     </main>
 
     <footer class="foot">
@@ -80,7 +79,6 @@
           <path class="foot-niac-icon-text"
             d="M1.20996 39.0713H2.22168V43.2891H7.33496V39.0713H8.34668V49.127H7.33496V44.2734H2.22168V49.127H1.20996V39.0713ZM18.6963 49.127H17.6504V41.4229L11.0264 49.127H10.8008V39.0713H11.8057V46.9121L18.4707 39.0713H18.6963V49.127ZM25.2656 39.0713L29.9551 49.127H28.875L27.2959 45.8184H22.9619L21.3896 49.127H20.2686L25.0195 39.0713H25.2656ZM25.1426 41.2041L23.4131 44.8477H26.8516L25.1426 41.2041ZM38.9648 49.127H31.5137V39.0713H32.5254V48.1836H37.167V39.0713H38.1787V48.1836H39.9014V50.6309H38.9648V49.127Z" />
         </svg>
-        <span class="foot-niac-text">&copy; ку нао &laquo;ниац&raquo;</span>
       </a>
     </footer>
 
