Добавлено модальное окно вывода информации

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,15 @@
 
 <body>
 
+  <div class="modal">
+    <div class="modal-info">
+      <div class="modal-info-close">
+        <span class="modal-info-close-left"></span>
+        <span class="modal-info-close-right"></span>
+      </div>
+    </div>
+  </div>
+
   <div class="wrapper">
     
     <header class="head">
@@ -65,6 +74,11 @@
           <li class="head-nav-item"><a class="head-nav-link" href="#">о системе</a></li>
         </ul>
       </nav>
+      <div class="burger-menu">
+        <span class="burger-menu-top"></span>
+        <span class="burger-menu-center"></span>
+        <span class="burger-menu-bottom"></span>
+      </div>
     </header>
 
     <main class="main">
