--- a/app/index.html
+++ b/app/index.html
@@ -68,10 +68,10 @@
       </div>
       <nav class="head-nav">
         <ul class="head-nav-list">
-          <li class="head-nav-item"><a class="head-nav-link" href="#">главная</a></li>
-          <li class="head-nav-item"><a class="head-nav-link" href="#">каталог данных</a></li>
-          <li class="head-nav-item"><a class="head-nav-link" href="#">справка</a></li>
-          <li class="head-nav-item"><a class="head-nav-link" href="#">о системе</a></li>
+          <!--<li class="head-nav-item"><a class="head-nav-link" href="#">главная</a></li>-->
+          <li class="head-nav-item"><a class="head-nav-link" data-menu="catalog" href="#">каталог данных</a></li>
+          <li class="head-nav-item"><a class="head-nav-link" data-menu="reference" href="#">справка</a></li>
+          <li class="head-nav-item"><a class="head-nav-link" data-menu="aboutsystem" href="#">о системе</a></li>
         </ul>
       </nav>
       <div class="burger-menu">
