Переход на классы

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="favicon.png" />
   <link rel="stylesheet" href="css/style.min.css">
+  <script defer src="js/main.min.js"></script>
   <title>Единая геоинформационная система Ненецкого автономного округа</title>
 </head>
 
@@ -68,7 +69,6 @@
       </div>
       <nav class="head-nav">
         <ul class="head-nav-list">
-          <!--<li class="head-nav-item"><a class="head-nav-link" href="#">главная</a></li>-->
           <li class="head-nav-item"><a class="head-nav-link" data-menu="catalog" href="#">каталог данных</a></li>
           <li class="head-nav-item"><a class="head-nav-link" data-menu="reference" href="#">справка</a></li>
           <li class="head-nav-item"><a class="head-nav-link" data-menu="aboutsystem" href="#">о системе</a></li>
@@ -98,8 +98,6 @@
 
   </div>
 
-  <script src="js/jquery.js"></script>
-  <script src="js/main.min.js"></script>
 </body>
 
 </html>
